tests/fixtures/invalid/bool_rshift_set.py
# Cannot right shift Bool and Set[int]
x: bool = True >> {1, 2, 3}
